Attemp to parallelize